--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 	<input type="text" class="nickname" placeholder="What is your nickname?">
 	<ul id="messages"></ul>
 	<form>
-		<input class="message" type="text" id="m" autocomplete="off">
+		<input class="message" type="text" id="m" placeholder="Let everyone know you're here" autocomplete="off">
 		<button>send</button>
 	</form>
   <script src="/socket.io/socket.io.js"></script>
